# python-poetry-fastapi-docker

./: Dockerfile  docker-compose.yml  pyproject.toml
