[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["m-allanson <github@mikeallanson.com>"]

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
sqlalchemy = "^2.0.30"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
